<resources>
    <string name="app_name">dhk</string>
    
<!-- main -->
    <string name="main_move_github">Github</string>
    <string name="main_move_custom_ui">UI</string>

    <string name="main_tab_api">API</string>
    <string name="main_tab_local">Local</string>

<!-- search-->
    <string name="search_pls_input_search_keyword">검색어를 입력하세요</string>
    <string name="search_score">Score : </string>

<!-- like user-->
    <string name="like_user_more">더 보기</string>
    <string name="like_user_no_data">데이터가 없습니다.</string>
    <string name="like_user_local_search">로컬 검색</string>

</resources>
