...
    <data>
        <variable name="model" type="com.example.dhk.ui.github.search.SearchViewModel" />
        <variable name="item" type="com.example.dhk.model.remote.github.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_item_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp10"
            android:clipChildren="false"
            android:clipToPadding="false"
        >
...
            android:textColor="@color/brown_grey"
            android:textSize="@dimen/sp10"
            android:text="@{item.scoreToString()}"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/search_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@{item.dibs}"
...
