...
        <import type="android.view.View" />
        <variable name="model" type="com.example.dhk.ui.github.likeuser.LikeUserViewModel" />
        <variable name="item" type="com.example.dhk.model.local.room.Dibs" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/like_user_item_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp10"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:visibility="@{item.visible}"
...
            android:textColor="@color/brown_grey"
            android:textSize="@dimen/sp10"
            android:text="@{item.scoreToString()}"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/like_user_item_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@{item.dibs}"
...
